syntax = "proto3";
package camion;


message Message {
  string body = 1;
}



service ChatService {
  rpc SayHelloCamion(Message) returns (Message) {}

  // El cliente genera una orden
  //rpc HacerPedido( Orden) returns (Codigo){}

  // El cliente solicita el estado de su pedido
  //rpc Estado( Codigo) returns (EstOrden){}

  // Camion pide arituclos
  //rpc Seguimiento(stream Asigcam) returns (stream Rescam){}
}